--- a/ap0501.html
+++ b/ap0501.html
@@ -2,14 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title> 応用プログラミング 第4回 課題2 (ap0402)
+		<title> 応用プログラミング 第5回 課題1 (ap0501)
 		</title>
 		<style>
-		  body { margin: 0; }
+		  body { margin: 0; background-color:#305070; color:white}
+		  #status { font-size: x-large; color: yellow;}
 		</style>
 	</head>
 	<body>
-		<div>G184002021 拓殖太郎</div>
+		<div><table id="status">
+			<td>Score: </td>
+			<td id="score">00000000</td>
+			<td id="life">○○○</td></table>
+		<div>Created by G184002021 拓殖太郎 </div></div>
 		<div id="WebGL-output"></div>
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script type="importmap"> {
@@ -18,6 +23,6 @@
 				"gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
 			}
 		} </script>
-		<script type="module" src="./ap0402.js"></script>
+		<script type="module" src="./ap0501.js"></script>
 	</body>
 </html>
