--- a/ap0401.html
+++ b/ap0401.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title> 応用プログラミング 第5回 課題1 (ap0501)
+		<title> 応用プログラミング 第4回 課題 (ap0401)
 		</title>
 		<style>
 		  body { margin: 0; background-color:#305070; color:white}
@@ -14,15 +14,15 @@
 			<td>Score: </td>
 			<td id="score">00000000</td>
 			<td id="life">○○○</td></table>
-		<div>Created by G184002021 拓殖太郎 </div></div>
+		<div>Created by G384002023 拓殖太郎 </div></div>
 		<div id="WebGL-output"></div>
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script type="importmap"> {
-			"imports": {
-				"three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-				"gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.17/+esm"
+			"imports" : {
+				"three" : "https://cdn.jsdelivr.net/npm/three@0.169.0/build/three.module.js",
+				"three/addons" : "https://cdn.jsdelivr.net/npm/three@0.169.0/examples/jsm/",
+				"ili-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.19/+esm"
 			}
 		} </script>
-		<script type="module" src="./ap0501.js"></script>
+		<script type="module" src="./ap0401.js"></script>
 	</body>
 </html>
